<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:minWidth="400dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/dialog_add_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_note_title"
        style="@style/DialogHeadline"/>

    <TextView
        android:id="@+id/dialog_add_note_carer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTextNormalLight"
        android:gravity="end"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_textview_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            style="@style/AppTextNormalLight"
            android:paddingRight="10dp"
            android:paddingLeft="3dp"
            android:layout_alignTop="@+id/dialog_input_tag"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <AutoCompleteTextView
            android:id="@+id/dialog_input_tag"
            style="@style/AppTextNormalLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_tags"
            android:textColorHint="@color/colorPrimary"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/dialog_textview_tag"
            android:layout_toEndOf="@+id/dialog_textview_tag" />

        <ImageButton
            android:id="@+id/fixNoteBtn"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:tint="@color/colorSecondaryText"
            app:srcCompat="@drawable/pin" />

    </RelativeLayout>


    <EditText
        android:id="@+id/dialog_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_note"
        android:textColorHint="@color/colorPrimary"
        android:minLines="5"
        android:gravity="top|left"
        style="@style/AppTextNormalLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_button_negative"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style="@style/AppButtonLight"
            android:paddingTop="20dp"/>

        <Button
            android:id="@+id/dialog_button_positive"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style="@style/AppButtonLight"
            android:paddingTop="20dp"/>

    </LinearLayout>

</LinearLayout>
