<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_add_todo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:minWidth="400dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/dialog_add_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_todo"
        style="@style/DialogHeadline"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Aufgabe"
            style="@style/AppTextNormalLight"
            android:paddingRight="10dp"
            android:paddingLeft="3dp"/>

        <EditText
            android:id="@+id/newTodo"
            style="@style/AppTextNormalLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Gib hier eine neue Aufgabe ein"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            style="@style/AppTextNormalLight"
            android:paddingRight="10dp"
            android:paddingLeft="3dp"/>

        <AutoCompleteTextView
            android:id="@+id/dialog_add_todo_tag"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_tags"
            android:textColorHint="@color/colorPrimary"
            style="@style/AppTextNormalLight"/>

    </LinearLayout>

    <EditText
        android:id="@+id/dialog_add_todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_description"
        android:textColorHint="@color/colorPrimary"
        android:minLines="5"
        android:gravity="top|left"
        style="@style/AppTextNormalLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <Button
        android:id="@+id/switch_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Datum wählen"
        style="@style/AppButtonLight"
        android:textSize="16dp"
        android:paddingBottom="10dp"/>

    <NumberPicker
        android:id="@+id/dialog_number_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTextNormalLight"/>

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:spinnersShown="false"
        android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_todo_button_cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style="@style/AppButtonLight"/>

        <Button
            android:id="@+id/dialog_todo_button_confirm"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style="@style/AppButtonLight"/>

    </LinearLayout>

</LinearLayout>
