<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:minWidth="400dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Neuer Hinweis"
        style="@style/DialogHeadline"/>


    <EditText
        android:id="@+id/hint_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_hint"
        android:textColorHint="@color/colorPrimary"
        android:minLines="5"
        android:gravity="top|left"
        style="@style/AppTextNormalLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_button_negative"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style="@style/AppButtonLight"
            android:paddingTop="20dp"/>

        <Button
            android:id="@+id/dialog_button_positive"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style="@style/AppButtonLight"
            android:paddingTop="20dp"/>

    </LinearLayout>

</LinearLayout>
