<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimaryDark"
        android:subtitleTextAppearance="@style/TextAppearance.Widget.ActionBar.Subtitle"
        app:popupTheme="@style/AppTheme.PopupOverlay"

        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/colorPrimaryTextWhite"
                android:onClick="goBack"
                android:text="Zurück"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            style="@style/AppTextMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/settingsHeadline"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/fontsizeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:checked="true"
            app:thumbTint="@color/colorPrimaryDark"
            app:trackTint="@color/colorPrimaryLight" />

        <TextView
            style="@style/AppTextMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/colorSettingsHeadline"/>

        <RadioGroup
            android:id="@+id/colorSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/theme1">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/theme1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="blue/green"
                app:buttonTint="@color/colorPrimaryDark"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/theme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="teal/lime"
                app:buttonTint="@color/colorPrimaryDark"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/theme3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="blue-grey/pink"
                app:buttonTint="@color/colorPrimaryDark"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/carerImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTextSmall"
                android:textColor="@color/white"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/carerName"
                style="@style/AppTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTextSmall"
                android:textColor="@color/white"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/role"/>

            <TextView
                android:id="@+id/carerRole"
                style="@style/AppTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTextSmall"
                android:textColor="@color/white"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/carerEmail"
                style="@style/AppTextNormal"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/change_password"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePassword"
                android:textSize="11dp" />

        </LinearLayout>

        <Button
            android:id="@+id/logoutButton"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/logout"/>

    </LinearLayout>

</RelativeLayout>
